--- a/.github/workflows/myWebhookCiCD.yml
+++ b/.github/workflows/myWebhookCiCD.yml
@@ -2,6 +2,8 @@ name: Webhook Action
 
 on:
   workflow_dispatch:
+    types:
+      - webhook
     inputs:
       id:
         description: 'ID to print'
