--- a/.github/workflows/myWebhookCiCD.yml
+++ b/.github/workflows/myWebhookCiCD.yml
@@ -1,7 +1,7 @@
 name: Webhook Action
 
 on:
-  workflow_dispatch:
+  repository_dispatch:
     types:
       - webhook
     inputs:
@@ -14,5 +14,7 @@ jobs:
   print_id:
     runs-on: ubuntu-latest
     steps:
+      - name: Run a script
+      run: echo "Event of type: $GITHUB_EVENT_NAME"
       - name: Print ID
-        run: echo "The ID is ${{ github.event.inputs.id }}"
+      run: echo "The ID is ${{ github.event.inputs.id }}"
