--- a/.github/workflows/myWebhookCiCD.yml
+++ b/.github/workflows/myWebhookCiCD.yml
@@ -10,6 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run a script
-        run: echo "Event of type: ${{ github.event_name }}"
+        run: 'echo "Event of type: ${{ github.event_name }}"'
       - name: Print ID
-        run: echo "The ID is ${{ github.event.client_payload.id }}"
+        run: 'echo "The ID is ${{ github.event.client_payload.id }}"'
